--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-celery-results==2.5.1
 django-timezone-field==7.0
 idna==3.7
 kombu==5.4.0
+mysqlclient==2.2.6
 pillow==10.3.0
 prompt_toolkit==3.0.47
 python-crontab==3.2.0
