--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 amqp==5.2.0
 asgiref==3.8.1
-beautifulsoup4==4.12.3
 billiard==4.2.0
-bs4==0.0.2
 celery==5.4.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
@@ -16,9 +14,10 @@ Django==5.0.6
 django-celery-beat==2.6.0
 django-celery-results==2.5.1
 django-timezone-field==7.0
+gunicorn==23.0.0
 idna==3.7
 kombu==5.4.0
-mysqlclient==2.2.6
+packaging==24.2
 pillow==10.3.0
 prompt_toolkit==3.0.47
 python-crontab==3.2.0
