--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ kombu==5.4.0
 packaging==24.2
 pillow==10.3.0
 prompt_toolkit==3.0.47
+psycopg2-binary==2.9.10
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
