--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,10 @@ colorama==0.4.6
 cron-descriptor==1.4.3
 Django==5.0.6
 django-celery-beat==2.6.0
-django-celery-results==2.5.1
 django-timezone-field==7.0
 gunicorn==23.0.0
 idna==3.7
-kombu==5.4.0
+kombu==5.4.2
 packaging==24.2
 pillow==10.3.0
 prompt_toolkit==3.0.47
@@ -24,6 +23,7 @@ psycopg2-binary==2.9.10
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+redis==5.2.1
 requests==2.32.3
 six==1.16.0
 soupsieve==2.6
