--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cron-descriptor==1.4.3
 Django==5.0.6
 django-celery-beat==2.6.0
 django-timezone-field==7.0
+django_celery_results==2.6.0
 flower==2.0.1
 gunicorn==23.0.0
 humanize==4.12.3
